# book-searcher

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  README.md  nest-cli.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20241102162345_book/: migration.sql
backend/src/: app.module.ts  main.ts
backend/src/book/: book.controller.ts  book.module.ts  book.service.ts
backend/src/book/dto/: book-create.dto.ts  book-filter.dto.ts
backend/src/i18n/ru/: validation.json
backend/src/search/: search.controller.ts  search.module.ts  search.service.ts
bot/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
bot/bot/: config.py  misc.py
bot/bot/dialogs/: __init__.py  main.py
bot/bot/handlers/: __init__.py  start.py
bot/bot/keyboards/: __init__.py  next_page.py  prev_page.py
bot/bot/services/: api.py
bot/bot/states/: main.py
scraper/: Dockerfile  README.md  main.py  pyproject.toml  startup.py
