[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Serik Urazmaxambetov <serikurazmaxambetov.v2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
