[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Serik Urazmaxambetov <serikurazmaxambetov.v2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
